syntax = "proto3";

option csharp_namespace = "Shared.Protos";

package product;

service ProductService {
  rpc GetProducts (EmptyRequest) returns (ProductList);
  rpc GetById (ProductIdRequest) returns (ProductDto);
}

message EmptyRequest {}

message ProductIdRequest {
  string id = 1;
}

message ProductDto {
  string id = 1;
  string name = 2;
  double price = 3;
}

message ProductList {
  repeated ProductDto items = 1;
}
